<resources>
    <string name="app_name">Real Estate Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="property_list_title">Properties list</string>
    <string name="property_detail_title">Property detail</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="property_square_feet">SqFt</string>
    <string name="property_price">Sales Price</string>
    <string name="property_price_value">$79,000,000</string>
    <string name="property_surface">Surface</string>
    <string name="property_surface_value">8,000 SqFt</string>
    <string name="property_rooms">Rooms</string>
    <string name="property_rooms_value">Unknow</string>
    <string name="property_description">Description</string>
    <string name="property_description_value">Live your dream lifestyle in this ultimate modern home designed by Foster + Partners. Residence 15 consists of the full private floor featuring 11 ft ceilings throughout the over 8000 sqft residence. The surrounding floor to ceiling windows maximize the light and sweeping 360-degree views</string>
    <string name="property_address_title">Title address</string>
    <string name="property_address_title_value">NEW YORK</string>

    <string name="property_address">Address</string>
    <string name="property_address_value">8829 183rd St, Jamaica, NY 11423</string>
    <string name="property_point_of_interest">Point of interest</string>
    <string name="property_point_of_interest_value">Central Park, High schools, Public transport</string>
    <string name="property_state">State</string>
    <string name="property_state_value">For sale</string>
    <string name="property_available">Available</string>
    <string name="property_available_value">Yes</string>
    <string name="property_entry_date">Entry date</string>
    <string name="property_entry_date_value">1/1/2021</string>
    <string name="property_sale_date">Sale date</string>
    <string name="property_sale_date_value">no sale date</string>

    <string name="property_agent_name">Agent name</string>
    <string name="property_agent_name_value">John Smith</string>
    <string name="property_agent_email">Agent email</string>
    <string name="property_agent_email_value">john.smith@realestate.com</string>
    <string name="property_agent_phone">Agent phone</string>
    <string name="property_agent_phone_value">00 1 212 7584941</string>

    <string name="property_category">Sale/rent</string>
    <string name="property_category_for_sale">For sale</string>
    <string name="property_category_for_rent">For rent</string>
    <string name="property_category_value">For sale or for rent</string>

    <string name="property_type">Type</string>
    <string name="property_type_value">Apartment</string>

    <string name="property_photo_add">Gallery</string>
    <string name="property_take_picture">Camera</string>
    <string name="property_photo_legend">Photo legend</string>
    <string name="property_photo_legend_value">Great place</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_date">No date</string>

    <string name="property_edit_title_create">Add a new property</string>
    <string name="property_edit_title_modify">Modify property</string>

    <string name="menu_add_property">Add property</string>
    <string name="menu_detail_property">Property detail</string>
    <string name="menu_edit_property">Edit property</string>
    <string name="search">Search</string>
    <string name="map">Map</string>

    <string name="title_activity_main">MainActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="row_property_list_picture_description">Property picture</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="sell">Sell</string>
    <string name="title_activity_permission">PermissionActivity</string>

    <string name="permission_request">Permission Request</string>
    <string name="permission_message">Application needs permission to access device location to provide required services. Please allow the permission.</string>
    <string name="discard_permission">Discard permission</string>
    <string name="grant_permission">Grant permission</string>
    <string name="permission_denied_message">Permission Denied. The app can not be used.</string>
    <string name="permission_granted_message">Permission Granted</string>
    <string name="value_required">value required</string>
    <string name="caption_required">caption required</string>
    <string name="photo_description">photo</string>
    <string name="entrer_caption_here">Enter caption here</string>
    <string name="edit_photo">Edit photo</string>
    <string name="delete">delete</string>
    <string name="title_delete_photo">Remove photo</string>
    <string name="please_confirm_delete_photo">Please confirm the deletion of the photo</string>
    <string name="confirm_delete_photo">Confirm delete</string>
    <string name="image_map_description">map</string>
    <string name="your_position">Your position</string>

    <string name="apply">Apply</string>
    <string name="reset_all">Reset all</string>
    <string name="search_full_text">search in text</string>
    <string name="all_agents">all agents</string>
    <string name="all_property_types">all types</string>
    <string name="select_price_range">select price range</string>
    <string name="select_price_surface">select surface range</string>
    <string name="select_price_rooms">select rooms range</string>

    <string name="select_entry_date">select date</string>
    <string name="reset_entry_date">reset date</string>

    <string name="select_sale_date">select date</string>
    <string name="reset_sale_date">reset date</string>
    <string name="no_date_range_selected">no date range selected</string>

    <string name="to">to</string>
    <string name="property_agent">agent</string>

    <string name="loan_amount">loan amount</string>
    <string name="interest_rate">interest rate</string>
    <string name="loan_duration">loan duration</string>
    <string name="monthly_payment">monthly payment</string>
    <string name="loan_calculator">loan calculator</string>

    <string name="property_created">Property created.</string>
    <string name="no_property_to_display">No property to display</string>


    <plurals name="month">
        <item quantity="zero">month</item>
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
</resources>
