<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_toolbar_add"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/menu_add_property"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_tool_bar_edit"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/menu_edit_property"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_toolbar_map"
        android:icon="@drawable/ic_menu_map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_toolbar_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

</menu>