<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/row_property_list_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/row_property_list_picture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/row_property_list_picture_description"
            app:srcCompat="@drawable/ic_house"

            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/row_property_list_address"
            style="@style/TextviewStyle.ThreeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/property_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/row_property_list_picture"
            app:layout_constraintTop_toTopOf="@id/row_property_list_picture" />

        <TextView
            android:id="@+id/row_property_list_type"
            style="@style/TextviewStyle.ThreeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/property_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toTopOf="@id/row_property_list_picture"
            app:layout_constraintBottom_toBottomOf="@id/row_property_list_picture"
            app:layout_constraintStart_toEndOf="@id/row_property_list_picture"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/row_property_list_price"
            style="@style/TextviewStyle.ThreeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/property_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@id/row_property_list_picture"
            app:layout_constraintStart_toEndOf="@id/row_property_list_picture"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
